[project]
name = "pvrclawk"
version = "0.1.0"
description = "Modular agent tool with graph-based membank"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "networkx>=3.3",
    "pydantic>=2.8.2",
    "rich>=13.7.1",
]

[project.scripts]
pvrclawk = "pvrclawk:main"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
